--- a/style.css
+++ b/style.css
@@ -16,11 +16,6 @@ body {
 .header_link {
     font-family: fantasy, cursive;
 }
-
-@media (max-width:768px) {
-.header { text-align: center;
-}
-}
 .main {
     display: block;
     width: 500px;
@@ -144,4 +139,9 @@ ul li.editMode input[type=text] {
 
 ul li.editMode label {
     display:none;
+}
+@media (max-width:768px) {
+  .header { 
+    text-align: center;
+  }
 }
