--- a/style.css
+++ b/style.css
@@ -77,17 +77,8 @@ input[type="text"]:focus {
     color: #333;
 }
 
-/* New Task */
-label[for='new-task'] {
-    display: block;
-    margin: 0 0 20px;
-}
-input#new-task {
-    width: 318px;
-}
-
 /* Task list */
-li {
+.row_wrapper {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
