--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ li > input[type="checkbox"] {
 li >    input[type="text"] {
     width: 226px
 }
-.delete-button img {
+.remove-img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
